--- a/.github/workflows/ami-build.yml
+++ b/.github/workflows/ami-build.yml
@@ -3,7 +3,7 @@ name: Build an AMI using Packer
 on:
   push:
     branches:
-      - 'master'
+      - 'main'
 jobs:
   packer-ami-build:
     runs-on: ubuntu-latest
