--- a/.github/workflows/ami-build.yml
+++ b/.github/workflows/ami-build.yml
@@ -24,7 +24,7 @@ jobs:
           packerArgs: 'build ami.json'
           workDir: '.'
         env:
-          AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: us-east-1
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_DEFAULT_REGION: us-east-1
           SUBNET_ID: ${{ secrets.SUBNET_ID }}
