--- a/.github/workflows/ami-build.yml
+++ b/.github/workflows/ami-build.yml
@@ -20,4 +20,4 @@ jobs:
           AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
           AWS_REGION: ${{ secrets.AWS_REGION }}
           SUBNET_ID: ${{ secrets.SUBNET_ID }}
-          PROD_ACCOUNT: ${{ secrets.PROD_ACCOUNT }}
+          AMI_USERS: ${{ secrets.AMI_USERS }}
