--- a/.github/workflows/ami-build.yml
+++ b/.github/workflows/ami-build.yml
@@ -21,3 +21,4 @@ jobs:
           AWS_REGION: ${{ secrets.AWS_REGION }}
           SUBNET_ID: ${{ secrets.SUBNET_ID }}
           AWS_AMI_USERS: ${{ secrets.AWS_AMI_USERS }}
+          SOURCE_AMI: ${{ secrets.SOURCE_AMI }}
