--- a/.github/workflows/ami-build.yml
+++ b/.github/workflows/ami-build.yml
@@ -17,7 +17,7 @@ jobs:
           workDir: '.'
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY }}
-          AWS_SECRET_KEY_ID: ${{ secrets.AWS_SECRET_KEY }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_KEY }}
           AWS_REGION: ${{ secrets.AWS_REGION }}
           SUBNET_ID: ${{ secrets.SUBNET_ID }}
           AWS_AMI_USERS: ${{ secrets.AWS_AMI_USERS }}
