--- a/.github/workflows/ami-build.yml
+++ b/.github/workflows/ami-build.yml
@@ -11,14 +11,13 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Packer AMI Build
-        uses: zmingxie/packer-ami-builder@master
+        uses: santisaez/packer-action@v1
         with:
-          packerArgs: 'build ami.json'
-          workDir: '.'
+          template: ami.json
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_KEY }}
-          AWS_REGION: ${{ secrets.AWS_REGION }}
+          AWS_DEFAULT_REGION: ${{ secrets.AWS_REGION }}
           SUBNET_ID: ${{ secrets.SUBNET_ID }}
           AWS_AMI_USERS: ${{ secrets.AWS_AMI_USERS }}
           SOURCE_AMI: ${{ secrets.SOURCE_AMI }}
