--- a/.github/workflows/ami-build.yml
+++ b/.github/workflows/ami-build.yml
@@ -11,9 +11,9 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Packer AMI Build
-        uses: santisaez/packer-action@v1
+        uses: docker://hashicorp/packer:1.6.4
         with:
-          template: ami.json
+          args: build packer.json
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_KEY }}
