--- a/.github/workflows/ami-build.yml
+++ b/.github/workflows/ami-build.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Packer AMI Build
         uses: docker://hashicorp/packer:1.6.4
         with:
-          args: build packer.json
+          args: build ami.json
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_KEY }}
